[package]
name = "meter"
version = "0.1.0"
authors = ["Kevin King <4kevinking@gmail.com>"]

[dependencies]
getopts = "0.2"
sound_stream = "*"
num = "0.1.25"

[dependencies.kissfft]
git = "https://github.com/kcking/rust-kissfft.git"

[dependencies.bounded-spsc-queue]
git = "https://github.com/kcking/bounded-spsc-queue.git"

[dependencies.rust-osc]
git = "https://github.com/generalelectrix/rust-osc.git"
